--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ defusedxml==0.7.1
 Deprecated==1.2.13
 detect==2020.12.3
 docopt==0.6.2
+dotenv
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.2.0/en_core_web_lg-3.2.0-py3-none-any.whl
 entrypoints==0.4
 executing==0.8.3
