--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -1,9 +1,13 @@
-    
+name: Run secret key
+on:
+  push:
+     branches: [ main ]
+
 steps:
-  - name: secret key
-    env:
-      ACCESSTOKEN: ${{secrets.ACCESSTOKEN}}
-      ACCESSTOKENSECRET: ${{secrets.ACCESSTOKENSECRET}}
-      CONSUMERKEY: ${{secrets.CONSUMERKEY}}
-      CONSUMERSECRET: ${{secrets.CONSUMERSECRET}}
+      env:
+       ACCESSTOKEN: ${{secrets.ACCESSTOKEN}}
+       ACCESSTOKENSECRET: ${{secrets.ACCESSTOKENSECRET}}
+       CONSUMERKEY: ${{secrets.CONSUMERKEY}}
+       CONSUMERSECRET: ${{secrets.CONSUMERSECRET}}
+  
       
