--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -1,12 +1,22 @@
 name: Run secret key
 on:
-  push:
-     branches: [ main ]
-
-env:
-   ACCESSTOKEN: ${{secrets.ACCESSTOKEN}}
-   ACCESSTOKENSECRET: ${{secrets.ACCESSTOKENSECRET}}
-   CONSUMERKEY: ${{secrets.CONSUMERKEY}}
-   CONSUMERSECRET: ${{secrets.CONSUMERSECRET}}
-run: python App/app.py
+  schedule:
+    - cron: '*/15 * * * *'
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+          - name: checkout repo content
+            uses: actions/checkout@v2 # checkout the repository content to github runner
+          - name: setup python
+            uses: actions/setup-python@v2
+            with:
+               python-version: '3.x' # install the latest python version
+          - name: execute py script
+            env:
+              ACCESSTOKEN: ${{secrets.ACCESSTOKEN}}
+              ACCESSTOKENSECRET: ${{secrets.ACCESSTOKENSECRET}}
+              CONSUMERKEY: ${{secrets.CONSUMERKEY}}
+              CONSUMERSECRET: ${{secrets.CONSUMERSECRET}}
+            run: python App/app.py
       
