--- a/requirements.txt
+++ b/requirements.txt
@@ -1,194 +1,22 @@
-﻿altair==4.2.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-astor==0.8.1
-asttokens==2.0.5
-attrs==21.4.0
-backcall==0.2.0
-base58==2.1.1
-beautifulsoup4==4.11.1
-billiard==4.0.0
-bleach==4.1.0
-blinker==1.4
-blis==0.7.6
-bpemb==0.3.3
-breadability==0.1.20
-bs4==0.0.1
-cachetools==5.0.0
-catalogue==2.0.6
-certifi==2021.10.8
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.12
-click==8.0.4
-cloudpickle==2.0.0
-coala-utils==0.5.1
-colorama==0.4.4
-conllu==4.4.2
-cycler==0.11.0
-cymem==2.0.6
-Cython==0.29.23
-DateTime==4.4
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.13
-detect==2020.12.3
-docopt==0.6.2
-python-dotenv
-en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.2.0/en_core_web_lg-3.2.0-py3-none-any.whl
-entrypoints==0.4
-executing==0.8.3
-Faker==13.3.1
-filelock==3.6.0
-flair==0.11.1
-fonttools==4.30.0
-ftfy==6.1.1
-future==0.18.2
-gdown==3.12.2
-gensim==3.6.0
-gensim-sum-ext==0.1.2
-gitdb==4.0.9
-GitPython==3.1.27
-google-trans-new==1.1.9
-google-translator==0.2
-huggingface-hub==0.5.1
-hyperopt==0.2.7
-idna==3.3
-importlib-metadata==3.10.1
-ipykernel==6.9.1
-ipython==8.1.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-Janome==0.4.2
-jedi==0.18.1
-Jinja2==3.0.3
-joblib==1.1.0
-jsonschema==4.4.0
-jupyter-client==7.1.2
-jupyter-core==4.9.2
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-keras==2.8.0
-kiwisolver==1.3.2
-konoha==4.6.5
-langcodes==3.3.0
-langdetect==1.0.9
-lxml==4.8.0
-MarkupSafe==2.1.0
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-mistune==0.8.4
-more-itertools==8.8.0
-mpld3==0.3
-murmurhash==1.0.6
-nbclient==0.5.11
-nbconvert==6.4.2
-nbformat==5.1.3
-neattext==0.1.2
-nest-asyncio==1.5.4
-networkx==2.8
-nltk==3.7
-notebook==6.4.8
-numpy==1.22.2
-oauthlib==3.2.0
-opencv-python==4.5.5.64
-overrides==3.1.0
-packaging==21.3
-pandas==1.4.1
-pandocfilters==1.5.0
-parso==0.8.3
-pathy==0.6.1
-patsy==0.5.2
-pickleshare==0.7.5
-Pillow==9.0.1
-pipeline==0.1.0
-plotly==5.6.0
-plotly-express==0.4.1
-pptree==3.1
-preshed==3.0.6
-prometheus-client==0.13.1
-prompt-toolkit==3.0.28
-protobuf==3.19.4
-pure-eval==0.2.2
-py4j==0.10.9.5
-pyarrow==7.0.0
-pycorenlp==0.3.0
-pycountry==22.3.5
-pycparser==2.21
-pydantic==1.8.2
-pydeck==0.7.1
-Pygments==2.11.2
-Pympler==1.0.1
-pyparsing==3.0.7
-pyrsistent==0.18.1
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==0.20.0
-pytz==2021.3
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-pyzmq==22.3.0
-regex==2022.3.2
+altair
+matplotlib
+joblib
+matplotlib
+matplotlib-inline
+neattext
+numpy
+oauthlib
+pandas
+plotly
+plotly-express
 requests==2.27.1
 requests-oauthlib==1.3.1
-sacremoses==0.0.53
 scikit-learn==1.0.2
-scipy==1.8.0
 seaborn==0.11.2
-segtok==1.5.11
-semver==2.13.0
-Send2Trash==1.8.0
-sentencepiece==0.1.95
-six==1.16.0
 sklearn==0.0
-smart-open==5.2.1
-smmap==5.0.0
-soupsieve==2.3.2.post1
-spacy==3.2.3
-spacy-legacy==3.0.9
-spacy-loggers==1.0.1
-sqlitedict==2.0.0
-srsly==2.4.2
-stack-data==0.2.0
-statsmodels==0.13.2
-streamlit==1.9.0
-summarise==0.0.9
-summarization==0.0.1
-sumy==0.9.0
-tabulate==0.8.9
-tenacity==8.0.1
-terminado==0.13.1
-testpath==0.6.0
 textblob==0.17.1
-Theano==1.0.5
-thinc==8.0.13
-threadpoolctl==3.1.0
 tokenizer==3.4.0
 tokenizers==0.12.1
-toml==0.10.2
-toolz==0.11.2
-torch==1.11.0
-tornado==6.1
-tqdm==4.63.0
-traitlets==5.1.1
-transformers==4.18.0
-turtle==0.0.1
 tweepy==4.8.0
 twitterscraper==1.6.1
-typer==0.4.0
-typing_extensions==4.1.1
-tzdata==2021.5
-tzlocal==4.1
 urllib3==1.26.8
-vaderSentiment==3.3.2
-validators==0.18.2
-wasabi==0.9.0
-watchdog==2.1.6
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.2
-Wikipedia-API==0.5.4
-wrapt==1.14.1
-zipp==3.7.0
-zope.interface==5.4.0
